<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaskNotebook</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">记事本</string>
    <string name="datetime">日期:</string>
    <string name="taskInfo">任务:</string>
    <string name="commit">提交</string>
    <string name="clear">清空</string>
    <string name="datetimein">日期时间:</string>
    <string name="timein">时间:</string>
    <string name="toTaskList">任务列表:</string>
    <string name="toWNL">万年历</string>
    <string name="infoNotComplete">数据信息不完整</string>
    <string name="dataTypeNotAvailable">数据类型不匹配</string>
    <string name="title_activity_my_activity2">MyActivity2</string>
    <string name="title_activity_task_list">TaskListActivity</string>
    <string name="tasklistactivityTitle">任务列表</string>
    <string name="reallyWantToDelete">真的要删除该任务吗??</string>
    <string name="title_activity_my">MyActivity</string>

    <string name="add_success">添加成功</string>

    <string name="noboringactionbar_title">记事本</string>

    <!-- 顶栏按钮 -->
    <string name="head_bar_more">更多</string>
    <string name="head_bar_add">添加</string>
    <string name="head_bar_search">搜索</string>

    <string name="please_input_name">请输入任务名</string>
    <string name="please_input_description_name">请输入详情</string>
    <string name="please_input_location_name">请输入描述</string>
    <string name="please_input_task_local">请输入地址</string>
    <string name="please_input_task_date">请输入开始时间</string>

    <string name="please_chose_date">请选择日期</string>
    <string name="please_chose_time">请选择时间</string>
    <string name="please_chose_begin_date">开始时间：</string>
    <string name="please_chose_end_date">结束时间：</string>



</resources>
