<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MyActivity"
    android:background="@color/white"
    android:textColor="@color/black">

    <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical" >
            <include layout="@layout/mainbar" />
     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/beginDateTimeTxt"
            style="@style/TNBControl.EditText"
            android:hint="@string/please_chose_begin_date"/>

        <EditText
            android:id="@+id/endDateTimeTxt"
            style="@style/TNBControl.EditText"
            android:hint="@string/please_chose_end_date"/>

        <EditText
            android:id="@+id/dateTimeTxt"
            style="@style/TNBControl.EditText"
            android:hint="@string/please_input_task_name"/>

        <EditText
            android:id="@+id/taskInfoTxt"
            style="@style/TNBControl.EditText"
            android:hint="@string/please_input_task_name"
            />

        <EditText
            style="@style/TNBControl.EditText"
            android:hint="请输入..."
            />

    </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/commitBtn"
                android:text="@string/commit"
                android:layout_width="80dp"
                android:layout_height="50dp"
                />
            <Button
                android:id="@+id/toWNLBtn"
                android:text="@string/toWNL"
                android:layout_toRightOf="@id/commitBtn"
                android:layout_width="80dp"
                android:layout_height="50dp"
                />
            <Button
                android:id="@+id/toTaskListBtn"
                android:text="@string/toTaskList"
                android:layout_toRightOf="@id/toWNLBtn"
                android:layout_width="80dp"
                android:layout_height="50dp"
                />
        </RelativeLayout>

</LinearLayout>
