<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/title_bar">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center_vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/logo_icon"
                android:contentDescription="@string/app_name"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:gravity="left"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="50dp"
                android:id="@+id/head_bar_search"
                android:layout_height="wrap_content"
                android:src="@drawable/actionbar_search_icon"
                android:background="@drawable/title_btn_right"
                android:contentDescription="@string/head_bar_search"
                />

            <ImageView
                android:id="@+id/head_bar_add"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@drawable/actionbar_add_icon"
                android:background="@drawable/title_btn_right"
                android:contentDescription="@string/head_bar_add"
                />

            <ImageView
                android:id="@+id/head_bar_more"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@drawable/actionbar_more_icon"
                android:background="@drawable/title_btn_right"
                android:contentDescription="@string/head_bar_more"
                />
        </LinearLayout>
    </RelativeLayout>



</LinearLayout>